# B0TyrQpdyRARn34vNlp8CQ-

./: .editorconfig  .env.example  .gitattributes  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_create_documents_table.py  0002_add_pipeline_columns.py  0003_create_routing_decisions_table.py
docs/: api.md  architecture.md  contract-p1-p2.md  setup-macos.md  setup-windows.md
infrastructure/fluent-bit/: fluent-bit.conf
infrastructure/loki/: loki-config.yml
infrastructure/postgres/: init.sql
infrastructure/prometheus/: prometheus.yml
scripts/: pull-models.sh  seed-chromadb.py  setup.ps1  setup.sh
services/confidence/: Dockerfile  README.md
services/entity_store/: Dockerfile  README.md
services/extraction/: Dockerfile  README.md
services/extraction/graphs/bank_statement/: graph.py
services/extraction/graphs/form_16/: graph.py
services/extraction/graphs/gst/: graph.py
services/extraction/graphs/itr/: graph.py
services/hitl/: Dockerfile  README.md
services/ingestion/: Dockerfile  README.md
services/ingestion/api/: main.py
services/ingestion/pipeline/: celery_app.py
services/ingestion/workers/: tasks.py
services/learning/: Dockerfile  README.md
services/query/: Dockerfile  README.md
services/router/: Dockerfile  README.md
services/router/router/: __init__.py  audit.py  fallback.py  graph.py  main.py  node.py  schemas.py
services/validation/: Dockerfile  README.md
shared/config/: __init__.py
shared/contracts/: __init__.py
shared/db/: __init__.py
shared/models/: __init__.py
shared/schemas/: bank_statement.yaml  form_16.yaml  gst.yaml  itr.yaml  passport.yaml  property_deed.yaml  salary_slip.yaml
tests/unit/: test_audit.py  test_dispatch.py  test_pipeline.py  test_router.py  test_routing_decisions.py  test_upload.py
(+3 files in other folders)
